<package format="2">
  <name>QARM</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for Quanser's QArm</p>
    <p>This package contains configuration data, 3D models and launch files
for Quanser's QArm robot</p>
  </description>
  <author>Quanser</author>
  <maintainer email="techsupport@quanser.com" />
  <license>BSD-3-Clause</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>